<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_id"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar_id">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/ll_opening_info_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_opening_info_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/tv_opening_info_title_description"
                    android:paddingHorizontal="8dp"
                    android:text="@string/opening_registration_opening_title"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_opening_info_title_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="8dp"
                    android:textSize="18sp"
                    tools:text="@tools:sample/lorem/random" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_opening_info_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="@+id/ll_opening_info_title"
                app:layout_constraintStart_toStartOf="@+id/ll_opening_info_title"
                app:layout_constraintTop_toBottomOf="@+id/ll_opening_info_title">

                <TextView
                    android:id="@+id/tv_opening_info_description_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/edt_opening_registration_description"
                    android:paddingHorizontal="8dp"
                    android:text="@string/opening_registration_description"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_opening_info_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="8dp"
                    android:textSize="18sp"
                    tools:text="@tools:sample/lorem/random" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_opening_info_activities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="@+id/ll_opening_info_title"
                app:layout_constraintStart_toStartOf="@+id/ll_opening_info_title"
                app:layout_constraintTop_toBottomOf="@+id/ll_opening_info_description">

                <TextView
                    android:id="@+id/tv_opening_registration_activities"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/edt_opening_registration_activities"
                    android:paddingHorizontal="8dp"
                    android:text="@string/opening_registration_activities"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_opening_info_activities"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="8dp"
                    android:textSize="18sp"
                    tools:text="@tools:sample/lorem/random" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_opening_info_prerequisite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="@+id/ll_opening_info_title"
                app:layout_constraintStart_toStartOf="@+id/ll_opening_info_title"
                app:layout_constraintTop_toBottomOf="@+id/ll_opening_info_activities">

                <TextView
                    android:id="@+id/tv_opening_info_prerequisite_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/edt_opening_registration_prerequisite"
                    android:paddingHorizontal="8dp"
                    android:text="@string/opening_registration_prerequisite"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_opening_info_prerequisite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="8dp"
                    android:textSize="18sp"
                    tools:text="@tools:sample/lorem/random" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_opening_info_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="@+id/ll_opening_info_title"
                app:layout_constraintStart_toStartOf="@+id/ll_opening_info_title"
                app:layout_constraintTop_toBottomOf="@+id/ll_opening_info_prerequisite">

                <TextView
                    android:id="@+id/tv_opening_info_email_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/edt_opening_registration_email"
                    android:paddingHorizontal="8dp"
                    android:text="@string/opening_registration_email"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_opening_info_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="8dp"
                    android:textSize="18sp"
                    tools:text="@tools:sample/full_names" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_opening_info_degrees"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/ll_opening_info_title"
                app:layout_constraintStart_toStartOf="@+id/ll_opening_info_title"
                app:layout_constraintTop_toBottomOf="@+id/ll_opening_info_email">

                <TextView
                    android:id="@+id/tv_opening_info_degrees_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/sp_opening_registration_courses"
                    android:paddingHorizontal="8dp"
                    android:text="@string/opening_registration_degrees_title"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_opening_info_degrees"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="8dp"
                    android:textSize="18sp"
                    tools:text="@tools:sample/lorem" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>